--- a/css/app.css
+++ b/css/app.css
@@ -57,7 +57,6 @@
   #bootstrap-brand {
     display: none;
   }
-
 }
 
 /* styles for minified navbar */
@@ -83,13 +82,13 @@
 
   /* add styling to make navbar items collapse into column */
   ul {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
   }
 
   /* horizontally center collapsed navbar items */
   .navbar .nav li {
-  left: calc(50% - 75px);
+    left: calc(50% - 75px);
   }
 
 }
@@ -118,14 +117,6 @@
 
 .navbar .nav {
   float: none;
-  text-align: center;
-}
-
-/*******
-* text *
-*******/
-
-.text-center {
   text-align: center;
 }
 
@@ -163,6 +154,33 @@
   /* 26px is half the button width */
   left: calc(50% - 26px); 
 }
+
+/***************
+* page content *
+***************/
+
+.page-content {
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+
+/***************************
+* horizontal line dividers *
+***************************/
+
+.horizontal-line {
+  width: 100%; 
+  height: 10px; 
+  border-bottom: 1px solid black; 
+  text-align: center;
+}
+
+.horizontal-line-text {
+  background-color: #ffffff; 
+  padding: 0 10px;
+}
+
 
 
 /****************
