update cas_user_id to cas_user_name in views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,9 +42,13 @@
       </div>
     </div> <!-- /#header -->
 
-    <!-- page content -->
-    <%= yield %>
+    <div class='
+    <% if controller_name != "static_pages" && action_name != "home" %>container<%end%>' %>
 
+      <!-- page content -->
+      <%= yield %>
+
+    </div>
   </div> <!-- /#wrap -->
   <div id="footer">
     <div id="footer-left">
