--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -5,13 +5,9 @@
   <%= image_tag @record.file_upload.url %>
 <% end %>
 
-
-
-
-
 <p>
   <strong>Cas user:</strong>
-  <%= @record.cas_user_id %>
+  <%= @record.cas_user_name %>
 </p>
 
 <p>
