--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -15,7 +15,7 @@
   <tbody>
     <% @records.each do |record| %>
       <tr>
-        <td><%= record.cas_user_id %></td>
+        <td><%= record.cas_user_name %></td>
         <td><%= record.title %></td>
         <td><%= record.metadata %></td>
         <td><%= link_to 'Show', record %></td>
