--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,4 +1,7 @@
-/* helpers for sticky footer */
+/****************************
+* helpers for sticky footer *
+****************************/
+
 * {
   margin: 0;
   padding: 0;
@@ -8,13 +11,29 @@ html, body {
   height: 100%;
 }
 
-/*********
-* navbar *
-*********/
+/******************
+* minified navbar *
+******************/
 
-/* override bootstrap collapse default to collapse on 
-   small (rather than the default extra-small) screens */
-@media (max-width: 991px) {
+/* override bootstrap collapse default to collapse on small rather than the default extra-small screens */
+@media (max-width: 767px) {
+  /* restore and center the voices brand and remove bootstrap brand */
+  #voices-brand {
+    display: none;
+  }
+
+  /* increase the size of the brand and center */
+  #bootstrap-brand {
+    display: block;
+    position: absolute;
+    font-size: 2.5em;
+    width: 126px;
+    left: calc(50% - 63px);
+    margin: 0;
+    padding: 0;
+    padding-top: 14px;
+  }
+
   .navbar-header {
     float: none;
   }
@@ -22,27 +41,39 @@ html, body {
     display: block;
   }
   .navbar-collapse {
-    border-top: 1px solid transparent;
-    box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    margin: 0;
+    padding: 0;
   }
   .navbar-collapse.collapse {
-    display: none!important;
+    display: none !important;
   }
   .navbar-nav {
     float: none!important;
-    margin: 7.5px -15px;
+    margin: 0;
+    padding: 0;
+    border-top: 1px solid #a6a6a6;
+    border-right: 1px solid #a6a6a6;
+    border-left: 1px solid #a6a6a6;
   }
   .navbar-nav>li {
     float: none;
+    display: block;
+    width: 100%;
+    margin: 0;
+    padding: 0;
   }
   .navbar-nav>li>a {
     padding-top: 10px;
     padding-bottom: 10px;
+    border-bottom: 1px solid #a6a6a6;
+    background-color: #e7e7e7 !important;
+    font-weight: 700;
   }
   .navbar-text {
     float: none;
     margin: 15px 0;
   }
+
   /* since 3.1.0 */
   .navbar-collapse.collapse.in { 
     display: block!important;
@@ -52,12 +83,11 @@ html, body {
   }
 }
 
+/******************
+* expanded navbar *
+******************/
 
-/* styles for expanded navbar */ 
-@media (min-width: 991px){
-  .navbar-default .navbar-nav > li > a:hover{
-    border: 1px solid red;
-  }
+@media (min-width: 767px){
 
   /* restore the voices brand (centered in list) 
     and remove the bootstrap brand (on left from bootstrap) */
@@ -70,40 +100,24 @@ html, body {
   #bootstrap-brand {
     display: none;
   }
-}
 
-/* styles for minified navbar */
-@media (max-width: 991px){
-  .navbar-default .navbar-nav > li > a:hover{
-    background-color: red;
+  #header a {
+    padding-top: 25px;
+    padding-bottom: 15px;
+    border: none;
   }
 
-  /* restore and center the voices brand and remove bootstrap brand*/
-  #voices-brand {
-    display: none;
-  }
-
-  #bootstrap-brand {
-    display: block;
-    position: absolute;
-    width: 52px;
-    left: calc(50% - 26px);
-    margin: 0;
-    padding: 0;
-    padding-top: 14px; 
-  }
-
-  /* add styling to make navbar items collapse into column */
-  ul {
-    display: flex;
-    flex-direction: column;
-  }
-
-  /* horizontally center collapsed navbar items */
   .navbar .nav li {
-    left: calc(50% - 75px);
+    display: inline-block;
+    float: none;
+    text-align: center;
   }
+
 }
+
+
+
+
 
 /* remove rounded edges from navbar */
 .navbar {
@@ -114,33 +128,13 @@ html, body {
   position: relative;
 }
 
-/* center navbar items */
-.navbar .nav li {
-  width: 150px; /* the width of each item */
-  display: inline-block;
-  float: none;
-}
-
-.navbar-inverse .navbar-nav > li > a {
-  margin: 0;
-  padding: 0;
-  padding-top: 12px;
-}
-
 .navbar .nav {
   float: none;
   text-align: center;
 }
 
-/* remove red border from focused nav items */
-#header a {
-  border: none;
-  padding-top: 25px;
-  padding-bottom: 15px;
-} 
-
-#header a:hover {
-  background-color: #f0f0f0;
+.navbar #voices-brand {
+  width: 180px;
 }
 
 /***************
@@ -269,42 +263,42 @@ h3, h4 {
 }
 
 
-/*******************
-* bootstrap colors *
-********************/
+/****************
+* navbar colors *
+****************/
 
 /* navbar */
 .navbar-default {
   background-color: #FFFFFF;
   border-color: #E7E7E7;
 }
+
 /* title */
 .navbar-default .navbar-brand {
-  color: #777;
+  color: #3F3F3F;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
   color: #5E5E5E;
 }
+
 /* link */
 .navbar-default .navbar-nav > li > a {
-  color: #777;
+  color: #3F3F3F;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #333;
+  color: #5E5E5E;
 }
 .navbar-default .navbar-nav > .active > a, 
 .navbar-default .navbar-nav > .active > a:hover, 
 .navbar-default .navbar-nav > .active > a:focus {
   color: #555;
-  background-color: #E7E7E7;
 }
 .navbar-default .navbar-nav > .open > a, 
 .navbar-default .navbar-nav > .open > a:hover, 
 .navbar-default .navbar-nav > .open > a:focus {
   color: #555;
-  background-color: #D5D5D5;
 }
 /* caret */
 .navbar-default .navbar-nav > .dropdown > a .caret {
@@ -323,15 +317,17 @@ h3, h4 {
   border-bottom-color: #555;
 }
 /* mobile version */
-.navbar-default .navbar-toggle {
-  border-color: #DDD;
-}
+.navbar-default .navbar-toggle,
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background-color: #DDD;
+  border-color: #fff;
+  background-color: #fff;
 }
 .navbar-default .navbar-toggle .icon-bar {
-  background-color: #CCC;
+  background-color: #000;
+}
+.navbar-default .navbar-toggle:focus .icon-bar {
+  background-color: #35A1E4;
 }
 @media (max-width: 767px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
