move navbar items to all caps

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,11 +32,11 @@
         <!-- navbar links -->
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">  
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contribute</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">CONTRIBUTE</a></li>
             <li><a href="#" id="voices-brand">VOICES</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#">Log In</a></li>
+            <li><a href="#contact">CONTACT</a></li>
+            <li><a href="#">LOG IN</a></li>
           </ul>
         </div>
       </div>
