in the navbar, make the link to the page the user is currently on blue

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -133,6 +133,11 @@ html, body {
   width: 180px;
 }
 
+/* make the currently selected page text a different color */
+#header a.active {
+  color: #35A1E4;
+}
+
 /***************
 * banner image *
 ***************/
