update record#new html

--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New record</h1>
+<div class="page-content">
+  <h4 class="center">Contribute</h4>
 
-<%= render 'form' %>
+  <div class="preface-text">Our stories are personal, but they are not unique. Join us as we begin to document and create a space for our voices in tomorrow's Yale. This is the Yale we choose. Our voices. Our stories. Our Yale.</div>
 
-<%= link_to 'Back', records_path %>
+  <%= render 'form' %>
+  
+</div>
