--- a/app/views/records/_form.html.erb
+++ b/app/views/records/_form.html.erb
@@ -13,10 +13,10 @@
 
   <div class="field">
     <%= f.label :include_name, "Would you like your name included in the archive?<sup>*</sup>".html_safe, :class => "long-label" %>
-    <%= f.check_box :include_name, :class => "custom-checkbox" %>
+    <%= f.check_box :include_name %>
   </div>
 
-  <div class="starred-field">
+  <div class="field">
     <%= f.label :title, "Title of Material<sup>*</sup>".html_safe %>
     <%= f.text_field :title %>
   </div>
@@ -56,6 +56,7 @@
   <div class="field">
     <%= f.label :release_checked, "Terms & Conditions<sup>*</sup>".html_safe %>
     <%= f.check_box :release_checked, :class => "custom-checkbox" %>
+    <div class="terms-and-conditions">If my contribution is accepted, I agree to donate this material to the Community Voices Archive at Yale University Library for preservation and distribution for research and educational purposes. I understand that I will not receive financial compensation for this material.</div>
   </div>
 
   <div class="clear-floats"></div>
