--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,4 +1,4 @@
-<div class="page-content">
+<div class="form-container">
   <h4 class="center">Contribute</h4>
 
   <div class="preface-text">Our stories are personal, but they are not unique. Join us as we begin to document and create a space for our voices in tomorrow's Yale. This is the Yale we choose. Our voices. Our stories. Our Yale.</div>
