update views to include page specific assets

--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,3 +1,8 @@
+<% content_for :head do %>
+  <%= stylesheet_link_tag 'static_pages' %>
+  <%= stylesheet_link_tag 'records' %>
+<% end %>
+
 <div class="form-container">
   <h4 class="center">Contribute</h4>
 
