--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -1,3 +1,8 @@
+<% content_for :head do %>
+  <%= stylesheet_link_tag 'static_pages' %>
+  <%= stylesheet_link_tag 'records' %>
+<% end %>
+
 <p id="notice"><%= notice %></p>
 
 <!-- Check to see what kind of file we're displaying -->
