--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,8 @@
+<% content_for :head do %>
+  <%= stylesheet_link_tag 'static_pages' %>
+  <%= javascript_include_tag 'static_pages' %>
+<% end %> 
+
 <!-- image with text and search overlays -->
 <div id="banner-image">
   <div id="text-overlay">
