--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -1,3 +1,8 @@
+<% content_for :head do %>
+  <%= stylesheet_link_tag 'static_pages' %>
+  <%= stylesheet_link_tag 'user' %>
+<% end %>
+
 <h1>User#show</h1>
 <p>Find me in app/views/user/show.html.erb</p>
  
