--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,3 +1,8 @@
+<% content_for :head do %>
+  <%= stylesheet_link_tag 'static_pages' %>
+  <%= stylesheet_link_tag 'records' %>
+<% end %>
+
 <h1>Listing records</h1>
 
 <table>
