--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,2 +1,6 @@
+<% content_for :head do %>
+  <%= stylesheet_link_tag 'static_pages' %>
+<% end %>
+
 <h1>StaticPages#contact</h1>
 <p>Find me in app/views/static_pages/contact.html.erb</p>
