update record form to style description box

--- a/app/views/records/_form.html.erb
+++ b/app/views/records/_form.html.erb
@@ -35,7 +35,7 @@
 
   <div class="field">
     <%= f.label :description, "Description of material" %>
-    <%= f.text_field :description %>
+    <%= f.text_area(:description, size: '4x5', id: "record-description") %>
   </div>
 
   <div class="field">
