--- a/app/views/records/edit.html.erb
+++ b/app/views/records/edit.html.erb
@@ -5,11 +5,6 @@
 <% end %>
 
 <div class="form-container">
-  <h1 class="center">Editing record</h1>
-
+  <h1 class="center-text">Editing record</h1>
   <%= render 'form' %>
-
-  <%= link_to 'Show', @record %> |
-  <%= link_to 'Back', records_path %>
-
 </div>
