add records.js to the records#new page

--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,6 +1,7 @@
 <% content_for :head do %>
   <%= stylesheet_link_tag 'static_pages' %>
   <%= stylesheet_link_tag 'records' %>
+  <%= javascript_include_tag 'records' %>
 <% end %>
 
 <div class="form-container">
