--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -5,25 +5,45 @@
 
 <p id="notice"><%= notice %></p>
 
-<!-- Check to see what kind of file we're displaying -->
-<% if @file_type == "image" %>
-  <%= image_tag @record.file_upload.url %>
-<% end %>
+<div class="record-details-top">
+  <h4 class="text-center">Confirmation</h4>
 
-<p>
-  <strong>Cas user:</strong>
-  <%= @record.cas_user_name %>
-</p>
+  <div class="preface-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eusimod accumsan est. Nonnec at bibendum tortor, vel elementum arcu. Duis quis nisi ac sem tempus elementum.</div>
+</div>
 
-<p>
-  <strong>Title:</strong>
-  <%= @record.title %>
-</p>
+<div class="gray-background">
+  <div class="form-container record-details"> 
+    <div class="over-image-row">
+      <h3 class="record-title"> <%= @record.title %></h3> 
+      <div class="btn-group" id="edit-record-button">
+        <%= link_to "Edit", 
+           {:controller => :records, :action => :edit,
+            :record => @record.id},
+           :class => "btn btn-primary" %>
+      </div>
+    </div>
 
-<p>
-  <strong>Metadata:</strong>
-  <%= @record.metadata %>
-</p>
+    <div class="image-container">
+      <%= image_tag @record.file_upload.url(:medium) %>
+    </div>
 
-<%= link_to 'Edit', edit_record_path(@record) %> |
-<%= link_to 'Back', records_path %>
+    <div class="metadata-spacer"></div>
+
+    <div class="record-display-left">
+      <div class="record-display-label">Description</div>
+      <div class="record-display-text"><%= @record.description %></div>
+    </div>
+
+    <div class="record-display-right">
+      <div class="record-display-label">Location</div>
+      <div class="record-display-text"><%= @record.location %></div>
+      
+      <div class="record-display-label">URL</div>
+      <div class="record-display-text"><%= @record.source_url %></div>
+      
+      <div class="record-display-label">Tags</div>
+      <div class="record-display-text"><%= @record.metadata %></div>
+      </div>
+    </div>
+  </div>
+</div>
