update html to explicitly include div with class=container where that div is necessary

--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -4,11 +4,13 @@
   <%= javascript_include_tag 'records' %>
 <% end %>
 
-<div class="form-container">
-  <h4 class="center">Contribute</h4>
+<div class="container">
+  <div class="form-container">
+    <h4 class="center">Contribute</h4>
 
-  <div class="preface-text">Our stories are personal, but they are not unique. Join us as we begin to document and create a space for our voices in tomorrow's Yale. This is the Yale we choose. Our voices. Our stories. Our Yale.</div>
+    <div class="preface-text">Our stories are personal, but they are not unique. Join us as we begin to document and create a space for our voices in tomorrow's Yale. This is the Yale we choose. Our voices. Our stories. Our Yale.</div>
 
-  <%= render 'form' %>
-  
+    <%= render 'form' %>
+    
+  </div>
 </div>
