--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -2,5 +2,7 @@
   <%= stylesheet_link_tag 'static_pages' %>
 <% end %>
 
-<h1>StaticPages#contact</h1>
-<p>Find me in app/views/static_pages/contact.html.erb</p>
+<div class="container">
+  <h1>StaticPages#contact</h1>
+  <p>Find me in app/views/static_pages/contact.html.erb</p>
+</div>
