--- a/app/views/records/edit.html.erb
+++ b/app/views/records/edit.html.erb
@@ -4,7 +4,9 @@
   <%= javascript_include_tag 'records' %>
 <% end %>
 
-<div class="form-container">
-  <h1 class="center-text">Editing record</h1>
-  <%= render 'form' %>
+<div class="container">
+  <div class="form-container">
+    <h1 class="center-text">Editing record</h1>
+    <%= render 'form' %>
+  </div>
 </div>
