--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -3,34 +3,38 @@
   <%= stylesheet_link_tag 'records' %>
 <% end %>
 
-<h1>Listing records</h1>
+<div class="container">
 
-<table>
-  <thead>
-    <tr>
-      <th>Cas user</th>
-      <th>Title</th>
-      <th>Metadata</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+  <h1>Listing records</h1>
 
-  <tbody>
-    <% @records.each do |record| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= record.cas_user_name %></td>
-        <td><%= record.title %></td>
-        <td><%= record.metadata %></td>
-        <td><%= link_to 'Show', record %></td>
-        <td><%= link_to 'Edit', edit_record_path(record) %></td>
-        <td><%= link_to 'Destroy', record, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Cas user</th>
+        <th>Title</th>
+        <th>Metadata</th>
+        <th></th>
+        <th></th>
+        <th></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @records.each do |record| %>
+        <tr>
+          <td><%= record.cas_user_name %></td>
+          <td><%= record.title %></td>
+          <td><%= record.metadata %></td>
+          <td><%= link_to 'Show', record %></td>
+          <td><%= link_to 'Edit', edit_record_path(record) %></td>
+          <td><%= link_to 'Destroy', record, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Record', new_record_path %>
+  <br>
+
+  <%= link_to 'New Record', new_record_path %>
+
+</div>
