--- a/app/assets/stylesheets/records.css.scss
+++ b/app/assets/stylesheets/records.css.scss
@@ -2,6 +2,17 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.small-banner-image-container {
+  width: 100%;
+  height: 140px;
+  overflow: hidden;
+}
+
+.small-banner-image-container.yale-image img {
+  width: 100%;
+  margin-top: calc(-9% + 20px);
+}
+
 /*************
 * record#new *
 *************/
