--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -4,6 +4,10 @@
   <%= javascript_include_tag 'records' %>
 <% end %>
 
+<div class="small-banner-image-container yale-image">
+  <%= image_tag("students.jpg") %> 
+</div>
+
 <div class="container">
   <div class="form-container">
     <h4 class="center">Contribute</h4>
