add specific styles for student image banner

--- a/app/assets/stylesheets/records.css.scss
+++ b/app/assets/stylesheets/records.css.scss
@@ -8,7 +8,7 @@
   overflow: hidden;
 }
 
-.small-banner-image-container.yale-image img {
+.small-banner-image-container.students-image img {
   width: 100%;
   margin-top: calc(-9% + 20px);
 }
