add the students image banner to all record views

--- a/app/views/records/edit.html.erb
+++ b/app/views/records/edit.html.erb
@@ -4,6 +4,10 @@
   <%= javascript_include_tag 'records' %>
 <% end %>
 
+<div class="small-banner-image-container students-image">
+  <%= image_tag("students.jpg") %> 
+</div>
+
 <div class="container">
   <div class="form-container">
     <h1 class="center-text">Editing record</h1>
