--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -5,6 +5,10 @@
 
 <p id="notice"><%= notice %></p>
 
+<div class="small-banner-image-container students-image">
+  <%= image_tag("students.jpg") %> 
+</div>
+
 <div class="record-details-top">
   <h4 class="text-center">Confirmation</h4>
 
