--- a/app/assets/stylesheets/records.css.scss
+++ b/app/assets/stylesheets/records.css.scss
@@ -118,7 +118,7 @@ span.btn.btn-small.btn-default.btn-inverse {
   -webkit-user-select: text;
   background-color: #f8f8f8;
   cursor: auto;
-  padding: 5px 20px;
+  padding: 5px 7px;
   border: 1px solid lightgray;
   font-style: italic;
   width: 200px;
@@ -211,3 +211,11 @@ a.btn.btn-primary {
   margin-bottom: 20px;
 }
 
+
+/********
+* flash *
+********/
+
+#notice {
+  display: none;
+}
