create margin between grid items in user#show

--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -2,8 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-
-.grid-sizer,
-.grid-item { 
-  width: 80px; 
+.container a { 
+  margin: 7px 7px;
 }
