--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -193,6 +193,12 @@ html, body {
   margin-left: calc(50% - 50px);
 }
 
+.gray-background {
+  background-color: #e6e6e6;
+  width: 100%;
+  height: 100%;
+}
+
 a.btn.btn-primary.center-button {
   width: 100px;
 }
@@ -211,7 +217,6 @@ h3, h4 {
 .page-content {
   margin: 40px 20% 140px 20%;
   overflow: auto;
-  padding-bottom: 80px;
 }
 
 #wrap {
