--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -4,6 +4,11 @@
 
 *, *:before, *:after {box-sizing:  border-box !important;}
 
+.masonry-container {
+  padding-top: 50px;
+  padding-bottom: 140px;
+}
+
 .masonry {
  -moz-column-width: 13em;
  -webkit-column-width: 13em;
