--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -215,8 +215,9 @@ h3, h4 {
 *********/
 
 .page-content {
-  margin: 40px 20% 140px 20%;
+  margin: 40px 20% 0px 20%;
   overflow: auto;
+  padding-bottom: 140px;
 }
 
 #wrap {
