--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,22 +62,45 @@
               <% end %>
             </li>
 
-            <li>
-              <% if session[:cas_user] %>
-                <% if controller?("user") && action?("show") %>
-                  <%= link_to session[:cas_user], user_show_path, :class => "active" %>
-                <% else %>
-                  <%= link_to session[:cas_user], user_show_path %>
-                <% end %>
-              <% else %>
-                <% if controller?("user") && action?("show") %>
-                  <% link_to "LOG IN", user_show_path, :class=> "active" %>
-                <% else %>
-                  <%= link_to "LOG IN", user_show_path %>
-                <% end %>
-              <% end %>
-            </li>
+            <% if session[:cas_user] %>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                  <%= session[:cas_user] %>
+                  <span class="caret">
+                  </span>
+                </a>
+                <ul class="dropdown-menu" id="profile-dropdown">
+                  <li>
+                    <div class="dropdown-menu-row-container">
+                      <span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span>
+                      <div class="dropdown-menu-row-text">
+                        <%= link_to "Submissions", user_show_path %>
+                      </div>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="dropdown-menu-row-container">
+                      <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>
+                      <div class="dropdown-menu-row-text">
+                        <%= link_to "Log Out", new_record_path %>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </li>
 
+            <% else %>
+              <% if controller?("user") && action?("show") %>
+                <li>
+                  <% link_to "LOG IN", user_show_path, :class=> "active" %>
+                </li>
+              <% else %>
+                <li>
+                  <%= link_to "LOG IN", user_show_path %>
+                </li>
+              <% end %>
+            <% end %>
+          
           </ul>
         </div>
       </div>
